--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
     "mitt": "^3.0.0",
+    "nanoid": "^4.0.0",
     "nprogress": "^0.2.0",
     "swiper": "^8.4.5",
     "vue": "^3.2.13",
