--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.30",
     "mitt": "^3.0.0",
     "nanoid": "^4.0.0",
     "nprogress": "^0.2.0",
+    "qrcode": "^1.5.1",
     "swiper": "^8.4.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
@@ -33,6 +35,8 @@
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
     "mockjs": "^1.1.0",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "unplugin-auto-import": "^0.14.2",
+    "unplugin-vue-components": "^0.23.0"
   }
 }
